# dicttorest

./: .cruft.json  README.md  pyproject.toml
